TESB-11684 Export folder for job can not be set and rise exception if it contains spaces
git-svn-id: http://talendforge.org/svn/tos/trunk@109774 f6f1c999-d317-4740-80b0-e6d1abc6f99e